--- a/pizzaEx/pizzaEx.csproj
+++ b/pizzaEx/pizzaEx.csproj
@@ -41,6 +41,7 @@
     </ItemGroup>
     <ItemGroup>
         <Compile Include="Pizza.cs" />
+        <Compile Include="PizzaCustom.cs" />
         <Compile Include="Program.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
     </ItemGroup>
